<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.login.ChooseFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="?editTextColor"
        android:layout_margin="5dp"
        android:text="@string/choosingServer" />
    <EditText android:id="@+id/editTextIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:gravity="center"
        android:hint="@string/ipAddress"
        android:inputType="text"
        android:layout_margin="5dp"
        android:text="192.168.174.188"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="?editTextColor"
        android:textColorHint="@color/gray" />
    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/port"
        android:gravity="center"
        android:inputType="number"
        android:layout_margin="5dp"
        android:text="8305"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="?editTextColor"
        android:textColorHint="@color/gray" />

    <Button android:id="@+id/toConnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toConnect"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"/>
</LinearLayout>